public/assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Teko&display=swap');


:root {
    /* Numbered from lightest to darkest (1-9) */
    --c-1: #ECCAFF;
    --c-2: #E2C6FF;
    --c-3: #D8C2FF;
    --c-4: #CEBEFF;
    --c-5: #C4BAFF;
    --c-6: #B9B5FF;
    --c-7: #AFB1FF;
    --c-8: #A5ADFF;
    --c-9: #9BA9FF;
    --c-10: #b970e9;
    --c-11: #8c70bd;

    --digital-dark: #445963;
    --digital-light: #05879f;

    /* Setting standard rem */
    font-size: 16px;
}

/* All Page Sizing */
html {
    height:100vh !important;
    width:100% !important;
    overflow-x: hidden;
    color: var(--c-primary);
    user-select: none;
    font-family: 'Teko', sans-serif !important;
}

/* Scrollbar Style */
::-webkit-scrollbar {
    scroll-behavior: smooth;
    width:10px;
    color: var(--c-secondary);
}
::-webkit-scrollbar-button {
    display: none;
}
::-webkit-scrollbar-thumb {
    color: var(--c-primary);
}
::-webkit-scrollbar-thumb:hover {
    color: var(--c-primary-hover);
}

body{
    background-color: #C4BAFF;
}
/* Custom Utility Classes */
.w-fit {
    width: fit-content;
}

.h-fit {
    height: fit-content;
}

/* Color classes */
.bg-color-1 {
    background-color: var(--c-1);
}
.bg-color-2 {
    background-color: var(--c-2);
}
.bg-color-3 {
    background-color: var(--c-3);
}
.bg-color-4 {
    background-color: var(--c-4);
}
.bg-color-5 {
    background-color: var(--c-5);
}
.bg-color-6 {
    background-color: var(--c-6);
}
.bg-color-7 {
    background-color: var(--c-7);
}
.bg-color-8 {
    background-color: var(--c-8);
}
.bg-color-9 {
    background-color: var(--c-9);
}
.bg-color-10 {
    background-color: var(--c-10);
}
.bg-color-11 {
    background-color: var(--c-11);
}

    /* PAGES STYLING */
/* Main Layout Styling */
#card {
   max-width: fit-content;
   border: 2px inset var(--c-7);
   border-radius: 10px; 
   box-shadow: 0px 5px 8px 0px #444444;
}

#icon {
    align-self: center;
}

/* login and signup info */
#signUp{
    display: flex;
    flex-direction: column;
    width: 100%;
    height: fit-content;
    justify-content: space-between;
    align-items: center;
    margin: auto;
}

#loginForm{
    display: flex;
    flex-direction: column;
    width: 100%;
    height: fit-content;
    justify-content: space-between;
    align-items: center;
    margin: auto;
}
input {
    width: 75%;
    height: 25px;
}
#signUp button {
    width: 75%;
    margin-top: 10px;
}
#login-button {
    width: 75%;
    margin-top: 10px;
    position: relative;
}
#loginBox {
    display: flex;
    flex-wrap: wrap;
    width: 75%;
    height: fit-content;
    margin: auto;
    margin-top: 20px;
    background-color: var(--c-1);
    align-items: center;
    flex:auto;
}
/* form {
    width: 550px;
    height: 450px;
    margin: auto;
    position: relative;
} */
#nav{
    background-color:var(--c-1);
    text-align: center;
    color: #646e68;
}

#card{
    background-color:#E2C6FF ;
}

#cardbody {
    border-radius: 0 0 10px 10px;
    padding: 0;
}

#profileCards{
    display: flex;
    justify-content: space-evenly;
}

#cardButton{
    background-color:var(--c-11);
    transition: transform 600ms ease;
}

#cardButton:hover {
    color: white;
    transform: scale(1.1);
}

#loginNav{
    display: flex;
    align-items: center;
    font-size: 50px;
    justify-content: center;
    color: #646e68;
}


@import url(https://fonts.googleapis.com/css?family=Roboto:400,300,500);
*:focus {
  outline: none;
}

#body {
  margin: 0;
  padding: 0;
  background: #C4BAFF;
  font-size: 16px;
  color: #222;
  font-family: 'Roboto', sans-serif;
  font-weight: 300;
  height: min-content;
}

#login-box {
  position: relative;
  margin: 5% auto;
  width: 600px;
  height: 400px;
  background: var(--c-1);
  border-radius: 2px;
  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.4);
}

.left {
  position: absolute;
  top: 0;
  left: 0;
  box-sizing: border-box;
  padding: 10px;
  padding-top: 40px;
  width: 50%;
  height: 100%;
  border-right: #646e68 solid 2px;
}

h1 {
  margin: 0 0 20px 0;
  font-weight: 300;
  font-size: 200%;
}

h2 {
    font-size: 150%;
}

h3{
    font-size: 125%;
}

input[type="text"],
input[type="password"] {
  display: block;
  box-sizing: border-box;
  margin-bottom: 20px;
  padding: 4px;
  width: 100%;
  height: 32px;
  border: none;
  border-bottom: 1px solid #AAA;
  font-family: 'Roboto', sans-serif;
  font-weight: 400;
  font-size: 15px;
  transition: 0.2s ease;
}

input[type="text"]:focus,
input[type="password"]:focus {
  border-bottom: 2px solid tan;
  color: tan;
  transition: 0.2s ease;
}

input[type="submit"] {
  margin-top: 28px;
  width: 120px;
  height: 32px;
  background: tan;
  border: none;
  border-radius: 2px;
  color: #FFF;
  font-family: 'Roboto', sans-serif;
  font-weight: 500;
  text-transform: uppercase;
  transition: 0.1s ease;
  cursor: pointer;
}

input[type="submit"]:hover,
input[type="submit"]:focus {
  opacity: 0.8;
  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.4);
  transition: 0.1s ease;
}

input[type="submit"]:active {
  opacity: 1;
  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.4);
  transition: 0.1s ease;
}


.digital-background {
    background-color: var(--digital-light);
    background-image: 
    linear-gradient(transparent 11px, rgba(220,220,200,.8) 12px, transparent 12px),
    linear-gradient(90deg, transparent 11px, rgba(220,220,200,.8) 12px, transparent 12px);
    background-size: 100% 12px, 12px 100%;
  }

.right {
  position: absolute;
  top: 0;
  right: 0;
  box-sizing: border-box;
  padding: 10px;
  padding-top: 40px;
  width: 50%;
  height: 100%;
  background-size: cover;
  background-position: center;
  border-radius: 0 2px 2px 0;
}

.right .loginwith {
  display: block;
  margin-bottom: 40px;
  font-size: 28px;
  color: #222;
  text-align: center;
}

button.social-signin {
  margin-bottom: 20px;
  width: 220px;
  height: 36px;
  border: none;
  border-radius: 2px;
  color: #FFF;
  font-family: 'Roboto', sans-serif;
  font-weight: 500;
  transition: 0.2s ease;
  cursor: pointer;
}

#login-button:hover,
#login-button:focus {
  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.4);
  transition: 0.2s ease;
}

#login-button:active {
  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.4);
  transition: 0.2s ease;
}


#login-button{
margin-top: 28px;
width: 120px;
height: 32px;
background: tan;
border: none;
border-radius: 2px;
color: #FFF;
font-family: 'Roboto', sans-serif;
font-weight: 500;
text-transform: uppercase;
transition: 0.1s ease;
}

/* SOCIAL LINKS/CREATE PAGE STYLING */
#fbBtn {
    text-decoration: none;
    color: black;
    transition: border-bottom 500ms ease;
}

#fbBtn:hover {
    opacity: 0.7;
    border-bottom: 1px solid black;
}

#twBtn {
    text-decoration: none;
    color: black;
    transition: border-bottom 500ms ease;
}

#twBtn:hover {
    opacity: 0.7;
    border-bottom: 1px solid black;
}

#lkBtn {
    text-decoration: none;
    color: black;
    transition: border-bottom 500ms ease;
}

#lkBtn:hover {
    opacity: 0.7;
    border-bottom: 1px solid black;
}
#logout {
    color: black;
    transition: 0.2s ease;
}

#logout:hover,
#logout:focus {
  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.4);
  background-color: var(--c-10);
  color: white;
}

#frontendBox{
    background-color: var(--c-1);
    width: 50%;
}

#backendBox{
    background-color: var(--c-1);
    width: fit-content;
    height: fit-content;
}
#aboutBox{
    background-color: var(--c-1);
}
#simBox{
    background-color: tan;
}
#jackBox{
    background-color: tan;
}
#derekBox{
    background-color: tan;
}
#lucioBox{
    background-color: tan;
    width: fit-content;
    height: fit-content;
}

#linkBox{
    background-color: tan;
}

#interactionbox{
    padding-top:10px;
}

#lucioPic{
    width: fit-content;
}

#aboutPage{
    display: flex;
    flex-direction: row;
}

